--- a/foundations/01-css-methods/internal.css
+++ b/foundations/01-css-methods/internal.css
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Methods for Adding CSS</title>
+div {
+    color: white;
+    background-color: red;
+    font-size: 32px;
+    text-align: center;
+  }
+  </head>
+  <body>
+    <div>Style me via the external method!</div>
 
+    <p>I would like to be styled with the internal method, please.
+{
+    color: white;
+    background-color: green;
+    font-size: 18px;
+  }
+</p>
+    <button>Inline Method
+    background-color:orange; 
+    font-size:18px;
+  }</button>
+
+  </body>
+</html>
